--- a/frontend/style.css
+++ b/frontend/style.css
@@ -6,6 +6,7 @@
 
 #root #menu-btn {
   position: fixed;
+  z-index: 100;
   width: 60px;
   height: 60px;
   top: 0;
@@ -52,5 +53,27 @@
   top: 28px;
   -webkit-transform: rotate(-45deg);
           transform: rotate(-45deg);
+}
+
+section {
+  width: 100%;
+  height: 100vh;
+}
+
+nav {
+  position: fixed;
+  z-index: 99;
+  top: 0;
+  right: 0;
+  width: 300px;
+  height: 100vh;
+  padding: 40px;
+  background-color: #000;
+  color: #fff;
+}
+
+nav a {
+  display: block;
+  margin-bottom: 20px;
 }
 /*# sourceMappingURL=style.css.map */
