--- a/frontend/style.scss
+++ b/frontend/style.scss
@@ -7,6 +7,7 @@
 
     #menu-btn {
         position: fixed;
+        z-index: 100;
         width: 60px;
         height: 60px;
         top: 0;
@@ -56,5 +57,27 @@
             }
             
         }
+    }
+}
+
+section{
+    width: 100%;
+    height: 100vh;
+}
+
+nav{
+    position: fixed;
+    z-index: 99;
+    top: 0;
+    right: 0;
+    width: 300px;
+    height: 100vh;
+    padding: 40px;
+    background-color: #000;
+    color: #fff;
+
+    a{
+        display: block;
+        margin-bottom: 20px;
     }
 }
