--- a/frontend/style.css
+++ b/frontend/style.css
@@ -55,6 +55,10 @@
           transform: rotate(-45deg);
 }
 
+#root.menu-opened nav {
+  right: 0px;
+}
+
 section {
   width: 100%;
   height: 100vh;
@@ -64,12 +68,14 @@ nav {
   position: fixed;
   z-index: 99;
   top: 0;
-  right: 0;
+  right: -300px;
   width: 300px;
   height: 100vh;
   padding: 40px;
   background-color: #000;
   color: #fff;
+  -webkit-transition: right 1s;
+  transition: right 1s;
 }
 
 nav a {
