--- a/frontend/style.scss
+++ b/frontend/style.scss
@@ -57,6 +57,10 @@
             }
             
         }
+
+        nav{
+            right: 0px;
+        }
     }
 }
 
@@ -69,12 +73,14 @@ nav{
     position: fixed;
     z-index: 99;
     top: 0;
-    right: 0;
+    right: -300px;
     width: 300px;
     height: 100vh;
     padding: 40px;
     background-color: #000;
     color: #fff;
+
+    transition: right 1s;
 
     a{
         display: block;
